--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <h1>Hello from Electron renderer!</h1>
+    <h1>Edgar teste</h1>
     <p>👋</p>
     <p id="info"></p>
 </body>
